Update guest login functionality and enhance sign-up success flow; redirect user to login after successful sign-up.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <div class="useraccess-form__btnholder">
                 <div role="button" class="btn filled-btn" onclick="validateLoginData()">Log in</div>
-                <div role="button" class="btn guest">Guest Log in</div>
+                <div role="button" class="btn guest" onclick="location.href='./pages/summary.html'">Guest Log in</div>
             </div>
         </form>
     </main>
