change init function names and add function loadTasks

--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -21,7 +21,7 @@
 
 </head>
 
-<body onload="init()">
+<body onload="initAddTask()">
     <nav aria-label="Primary navigation" id="nav-menu" class="nav-menu">
         <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
         <div class="nav-menu__btn-container">
