--- a/pages/summary.html
+++ b/pages/summary.html
@@ -20,7 +20,7 @@
     <script src="../scripts/summary.js" defer></script>
 </head>
 
-<body onload="init()">
+<body onload="initSummary()">
     <nav aria-label="Primary navigation" id="nav-menu" class="nav-menu">
         <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
         <div class="nav-menu__btn-container">
