--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -43,13 +43,13 @@
                 </div>
 
                 <div id="password__wrapper" class="inputfield__wrapper">
-                    <input id="password" type="password" placeholder="Password" aria-label="password" onkeyup="detectChange(this)">
+                    <input id="password" type="password" placeholder="Password" aria-label="password" onkeyup="handlePasswordInputChange(this)">
                     <img id="password-icon" src="../assets/img/lock.svg" alt="icon of a lock" onclick="setPasswordVisibility(this)">
                 </div>
 
                 <div id="confirm-pw__wrapper" class="inputfield__wrapper">
                     <input id="confirm-password" type="password" placeholder="Confirm Password"
-                        aria-label="confirm password" onkeyup="checkMatchingPasswords()">
+                        aria-label="confirm password" onkeyup="validatePasswordMatch()">
                     <img id="confirm-password-icon" src="../assets/img/lock.svg" alt="icon of a lock" onclick="setPasswordVisibility(this)">
                     <p id="pw-error-warning" class="confirm-password__err-warning">Your passwords don't match. Please
                         try again.</p>
@@ -58,7 +58,7 @@
 
 
                 <p class="useraccess-form__privacy-policy">
-                    <input type="checkbox" id="check" onclick="checkIfEverythingIsFilledIn()"/>
+                    <input type="checkbox" id="check" onclick="evaluateFormValidity()"/>
                     <label for="check"></label>
                     <span>I accept the <a href="/pages/privacy-policy.html">Privacy Policy</a>
                     </span>
