--- a/pages/board.html
+++ b/pages/board.html
@@ -24,8 +24,9 @@
         <script src="../scripts/load-inserts.js" defer></script>
         <script src="../scripts/dlg-edit-task-assignment.js" defer></script>
         <script src="../scripts/dlg-add-task-subtask-handling.js" defer></script>
+        <script src="../scripts/drag-and-drop.js" defer></script>
 
-        <script src="../templates/tpl-dialogs.js"></script>
+        <script src="../templates/tpl-dialogs.js" defer></script>
 
     </head>
 
@@ -93,7 +94,7 @@
                                 <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg"
                                     alt="add task to 'to do'">
                             </span>
-                            <div id="to-do-tasks" class="tasks">
+                            <div id="to-do-tasks" class="tasks" ondrop="moveTo(event)" ondragover="allowDrop(event)">
                                 <div class="no-tasks-placeholder">No active tasks</div>
                             </div>
                         </div>
@@ -104,8 +105,8 @@
                                 <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg"
                                     alt="add task to 'in progress'">
                             </span>
-                            <div id="in-progress-tasks" class="tasks">
-                                <div class="task" onclick="renderTaskInfoDlg()">
+                            <div id="in-progress-tasks" class="tasks" ondrop="moveTo(event)" ondragover="allowDrop(event)">
+                                <div draggable="true" ondragstart="startDragging()" class="task" onclick="renderTaskInfoDlg()">
                                     <span class="task__category">${task.category}</span>
                                     <div class="task__content-metadata-box">
                                         <span class="task__title">Kochwelt bla Blubb! & noch mehr Rezepte</span>
@@ -141,7 +142,7 @@
                                 <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg"
                                     alt="add task to 'await feedback'">
                             </span>
-                            <div id="await-feedback-tasks" class="tasks">
+                            <div id="await-feedback-tasks" class="tasks" ondrop="moveTo(event)" ondragover="allowDrop(event)">
                                 <div class="task">
                                     <span class="task__category2">${task.category}</span>
                                     <div class="task__content-metadata-box">
@@ -170,7 +171,7 @@
 
                         <div id="done-container" class="board__table__column">
                             <h2>Done</h2>
-                            <div id="done-tasks" class="tasks"></div>
+                            <div id="done-tasks" class="tasks" ondrop="moveTo(event)" ondragover="allowDrop(event)"></div>
                         </div>
                     </div>
                 </section>
