Add overlay to sign-up page, enhance dialog visibility, and improve CSS transitions

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -66,6 +66,7 @@
             </div>
             <div id="sign-up-btn" role="button" aria-disabled="true" class="btn filled-btn disabled" onclick="sendSignupForm()">Sign up</div>
         </form>
+        <overlay id="overlay" class="overlay d-none"></overlay>
     </main>
 
     <footer class="content-wrapper">
