feat(summary): implement task counting functions (countToDos and countingLoop)

--- a/pages/board.html
+++ b/pages/board.html
@@ -28,7 +28,7 @@
         <script src="../scripts/drag-and-drop.js" defer></script>
 
         <script src="../templates/tpl-dialogs.js"></script>
-        <script src="../templates/tpl-add-task.js" defer></script>
+        <script src="../templates/tpl-task-card.js" defer></script>
 
     </head>
 <body onload="initBoard()">
