--- a/pages/summary.html
+++ b/pages/summary.html
@@ -78,7 +78,7 @@
                                     class="metrics__box metrics__box-top metrics__icon-todo">
                                     <img class="" src="../assets/img/to-do.svg" alt="Grey circle with a white pen in the center">
                                     <div class="metrics__box-text">
-                                        <span class="metric-number">1</span>
+                                        <span class="metric-number" id="to-do-count"></span>
                                         <span class="metric-txt">To-do</span>
                                     </div>
                                 </a>
@@ -88,7 +88,7 @@
                                     metrics__icon-done">
                                     <img src="../assets/img/done.png" alt="Grey circle with a white checkmark in the center">
                                     <div class="metrics__box-text">
-                                        <span class="metric-number">1</span>
+                                        <span class="metric-number" id="done-count"></span>
                                         <span class="metric-txt">Done</span>
                                     </div>
                                 </a>
@@ -101,7 +101,7 @@
                                     <div class="metrics__box-left">
                                         <img src="../assets/img/urgent-summary.png" alt="Red circle with two white arrows on top of each other pointing up">
                                         <div class="metrics__box-text">
-                                            <span class="metric-number">1</span>
+                                            <span class="metric-number" id="urgent-count"></span>
                                             <span class="metric-txt-middle">Urgent</span>
                                         </div>
                                     </div>
@@ -116,19 +116,19 @@
                             <div class="summary-content__metrics-row">
                                 <a href="./board.html" class="metrics__box metrics__box-bottom">
                                     <div class="metrics__box-text">
-                                        <span class="metric-number">1</span>
+                                        <span class="metric-number" id="tasks-count"></span>
                                         <span class="metric-txt">Tasks In <br>Board</span>
                                     </div>
                                 </a>
                                 <a href="./board.html" class="metrics__box metrics__box-bottom">
                                     <div class="metrics__box-text">
-                                        <span class="metric-number">1</span>
+                                        <span class="metric-number" id="in-progress-count"></span>
                                         <span class="metric-txt">Tasks In <br>Progress</span>
                                     </div>
                                 </a>
                                 <a href="./board.html" class="metrics__box metrics__box-bottom">
                                     <div class="metrics__box-text">
-                                        <span class="metric-number">1</span>
+                                        <span class="metric-number" id="awaiting-feedback"></span>
                                         <span class="metric-txt">Awaiting <br>Feedback</span>
                                     </div>
                                 </a>
