feat(contacts): edit contact db functionality

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -18,6 +18,7 @@
     <script src="../templates/tpl-contacts.js" defer></script>
     <script src="../script.js" defer></script>
     <script src="../templates/tpl-user-profil-img.js" defer></script>
+    <script src="../scripts/dlgs-contact.js"></script>
 </head>
 
 <body onload="renderContactList()">
