--- a/pages/board.html
+++ b/pages/board.html
@@ -91,89 +91,35 @@
 
                     <div id="board-table" class="board__table">
 
-                        <div id=to-do-container class="board__table__column">
+                        <div id="to-do-container" class="board__table__column">
                             <span>
-                                <h2>To do</h2>
-                                <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg"
-                                    alt="add task to 'to do'">
+                            <h2>To do</h2>
+                            <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg" alt="add task to 'to do'" onclick="renderAddTaskDlg('to-do')">
                             </span>
                             <div id="to-do-tasks" class="tasks" ondrop="moveTo(event)" ondragover="allowDrop(event)"></div>
                         </div>
 
                         <div id="in-progress-container" class="board__table__column">
                             <span>
-                                <h2>In Progress</h2>
-                                <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg"
-                                    alt="add task to 'in progress'">
+                            <h2>In Progress</h2>
+                            <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg" alt="add task to 'in progress'" onclick="renderAddTaskDlg('in-progress')">
                             </span>
-                            <div id="in-progress-tasks" class="tasks" ondrop="moveTo(event)" ondragover="allowDrop(event)">
-                                <div draggable="true" ondragstart="startDragging()" class="task" onclick="renderTaskInfoDlg()">
-                                    <span class="task__category">${task.category}</span>
-                                    <div class="task__content-metadata-box">
-                                        <span class="task__title">Kochwelt bla Blubb! & noch mehr Rezepte</span>
-                                        <span class="task__description">Rezepte und son kram und noch bissel mehr Text, damit
-                                            sich das Ticket auch lohnt</span>
-                                    </div>
-                                    <div class="task__subtasks-and-progressbar-box">
-                                        <span class="task__progressbar" style="--progress: 33.3333%;"></span>
-                                        <span class="task__subtasks"> 1 / 3 Subtasks</span>
-                                    </div>
-                                    <div class="task__assignment-and-priority-box">
-                                        <div class="task__assignments">
-                                            <!-- user images nur zur veranschaulichung. wird später mit JS gerendert -->
-                                            <img class="user-img" id="${task.user.id}" src="../assets/img/user-img-anna.svg"
-                                                alt="User Image or initials">
-                                            <img class="user-img" id="${task.user.id}"
-                                                src="../assets/img/user-img-david.svg" alt="User Image or initials">
-                                            <img class="user-img" id="${task.user.id}"
-                                                src="../assets/img/user-img-sofia.svg" alt="User Imare or initials">
-                                        </div>
-                                        <div class="task__priority">
-                                            <img id="priority" class="task_priority" src="../assets/img/priority-medium.svg"
-                                                alt="image of prioritylevel">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            <div id="in-progress-tasks" class="tasks" ondrop="moveTo(event)" ondragover="allowDrop(event)"></div>
                         </div>
 
                         <div id="await-feedback-container" class="board__table__column">
                             <span>
-                                <h2>Await Feedback</h2>
-                                <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg"
-                                    alt="add task to 'await feedback'">
+                            <h2>Await Feedback</h2>
+                            <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg" alt="add task to 'await feedback'" onclick="renderAddTaskDlg('await-feedback')">
                             </span>
-                            <div id="await-feedback-tasks" class="tasks" ondrop="moveTo(event)" ondragover="allowDrop(event)">
-                                <div class="task">
-                                    <span class="task__category2">${task.category}</span>
-                                    <div class="task__content-metadata-box">
-                                        <span class="task__title">Und noch so ein Ding mit anderer Prio!</span>
-                                        <span class="task__description">Aber dieses mal ohne Subtasks und ohne progressbar.
-                                            Aber trotzdem genauso viel Text =P</span>
-                                    </div>
-                                    <div class="task__assignment-and-priority-box">
-                                        <div class="task__assignments">
-                                            <!-- user images nur zur veranschaulichung. wird später mit JS gerendert -->
-                                            <img class="user-img" id="${task.user.id}" src="../assets/img/user-img-anna.svg"
-                                                alt="User Image or initials">
-                                            <img class="user-img" id="${task.user.id}"
-                                                src="../assets/img/user-img-david.svg" alt="User Image or initials">
-                                            <img class="user-img" id="${task.user.id}"
-                                                src="../assets/img/user-img-sofia.svg" alt="User Imare or initials">
-                                        </div>
-                                        <div class="task__priority">
-                                            <img id="priority" src="../assets/img/priority-low.svg"
-                                                alt="image of prioritylevel">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            <div id="await-feedback-tasks" class="tasks" ondrop="moveTo(event)" ondragover="allowDrop(event)"></div>
                         </div>
 
                         <div id="done-container" class="board__table__column">
                             <h2>Done</h2>
                             <div id="done-tasks" class="tasks" ondrop="moveTo(event)" ondragover="allowDrop(event)"></div>
                         </div>
+
                     </div>
                 </section>
             </div>
