--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -19,6 +19,7 @@
     <script src="../script.js" defer></script>
     <script src="../templates/tpl-user-profil-img.js" defer></script>
     <script src="../scripts/dlgs-contact.js"></script>
+    <script src="../scripts/generate-user-id.js"></script>
 </head>
 
 <body onload="renderContactList()">
@@ -89,12 +90,12 @@
                                 <div class="contact-info-card__header">
                                     <div class="header__contact-profil-img"></div>
                                     <div class="manage-contact__header">
-                                        <h3 id="contact-name">Name</h3>
+                                        <h3 id="contact-name"></h3>
                                         <div class="manage-contact__actions">
                                             <img class="action__edit" src="../assets/img/edit-with-text.svg"
                                                 alt="a grey pencil" onclick="renderEditContactDlg()">
                                             <img class="action__delete" src="../assets/img/delete-with-text.svg"
-                                                alt="a grey trashbin">
+                                                alt="a grey trashbin" onclick="deleteUserFromDB()">
                                         </div>
                                     </div>
                                 </div>
@@ -102,9 +103,9 @@
                                 <p class="contact-info__header">Contact Information</p>
                                 <div class="contact-info__details">
                                     <p><strong>Email</strong></p>
-                                    <p id="contact-email" class="details__email">max.mustermann@web.de</p>
+                                    <p id="contact-email" class="details__email"></p>
                                     <p><strong>Phone</strong></p>
-                                    <p id="contact-phone">+49 1111 111 111</p>
+                                    <p id="contact-phone"></p>
                                 </div>
                             </div>
                         </div>
