feat(tasks): save category as key (userStory/technicalTask) and format label for display

--- a/pages/add-task-insert.html
+++ b/pages/add-task-insert.html
@@ -51,8 +51,8 @@
                 <label for="category" class="required--after">Category</label>
                 <select name="category" id="category" required>
                     <option value="" disabled selected hidden>Select task category</option>
-                    <option value="1">Technical Task</option>
-                    <option value="2">User Story</option>
+                    <option value="technicalTask">Technical Task</option>
+                    <option value="userStory">User Story</option>
                 </select>
             </div>
             <div class="add-task__field subtasks__input--border-color">
