--- a/pages/board.html
+++ b/pages/board.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="../styles/dlg-task-info.css">
         <link rel="stylesheet" href="../styles/dlg-edit-task.css">
         <link rel="stylesheet" href="../styles/dlg-add-task.css">
-        
+
         <script src="../scripts/db.js" defer></script>
         <script src="../script.js" defer></script>
         <script src="../scripts/board.js" defer></script>
@@ -97,7 +97,7 @@
                             <h2>To do</h2>
                             <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg" alt="add task to 'to do'" onclick="renderAddTaskDlg('to-do')">
                             </span>
-                            <div id="to-do-tasks" class="tasks" ondrop="moveTo(event)" ondragover="allowDrop(event)" ondragleave="removeDragOver(event)"></div>
+                            <div id="to-do-tasks" class="tasks" ondrop="moveTo(event)" ondragover="allowDrop(event)"></div>
                         </div>
 
                         <div id="in-progress-container" class="board__table__column">
@@ -105,7 +105,7 @@
                             <h2>In Progress</h2>
                             <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg" alt="add task to 'in progress'" onclick="renderAddTaskDlg('in-progress')">
                             </span>
-                            <div id="in-progress-tasks" class="tasks" ondrop="moveTo(event)" ondragover="allowDrop(event)" ondragleave="removeDragOver(event)"></div>
+                            <div id="in-progress-tasks" class="tasks" ondrop="moveTo(event)" ondragover="allowDrop(event)"></div>
                         </div>
 
                         <div id="await-feedback-container" class="board__table__column">
@@ -113,12 +113,12 @@
                             <h2>Await Feedback</h2>
                             <img class="add-task-to-btn" src="../assets/img/add-btn-border.svg" alt="add task to 'await feedback'" onclick="renderAddTaskDlg('await-feedback')">
                             </span>
-                            <div id="await-feedback-tasks" class="tasks" ondrop="moveTo(event)" ondragover="allowDrop(event)" ondragleave="removeDragOver(event)"></div>
+                            <div id="await-feedback-tasks" class="tasks" ondrop="moveTo(event)" ondragover="allowDrop(event)"></div>
                         </div>
 
                         <div id="done-container" class="board__table__column">
                             <h2>Done</h2>
-                            <div id="done-tasks" class="tasks" ondrop="moveTo(event)" ondragover="allowDrop(event)" ondragleave="removeDragOver(event)"></div>
+                            <div id="done-tasks" class="tasks" ondrop="moveTo(event)" ondragover="allowDrop(event)"></div>
                         </div>
 
                     </div>
