--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="./assets/img/logo-black.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./styles/login-signup.css">
+    <script src="./script.js" defer></script>
     <script src="./scripts/login.js" defer></script>
 </head>
 
