--- a/pages/summary.html
+++ b/pages/summary.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/navigation.css">
     <link rel="stylesheet" href="../styles/summary.css">
-
+    <script src="../scripts/manage-user-profil.js" defer></script>
     <script src="../scripts/db.js" defer></script>
     <script src="../script.js" defer></script>
     <script src="../scripts/main.js" defer></script>
@@ -24,11 +24,11 @@
     <nav aria-label="Primary navigation" id="nav-menu" class="nav-menu">
         <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
         <div class="nav-menu__btn-container">
-            <a class="nav-btn--selected deactivated" href="./summary.html"><img src="../assets/img/summary.svg" alt="go to Summary-page">Summary</a>
+            <a class="nav-btn--selected deactivated" href="./summary.html"><img src="../assets/img/summary.svg"
+                    alt="go to Summary-page">Summary</a>
             <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="go to Add-Task-page">Add Task</a>
             <a href="./board.html"><img src="../assets/img/board.svg" alt="go to Board-page">Board</a>
-            <a href="./contacts.html"><img src="../assets/img/contacts.svg"
-                    alt="go to Contacts-page">Contacts</a>
+            <a href="./contacts.html"><img src="../assets/img/contacts.svg" alt="go to Contacts-page">Contacts</a>
         </div>
         <div class="nav-menu__bottom__btn">
             <a href="./privacy-policy.html">Privacy Policy</a>
@@ -46,16 +46,14 @@
                             <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
                         </a>
                         <div class="header__user-info">
-                            <img src="../assets/img/user-ellipse.svg" alt="User picture">
-                            <span>SM</span>
                         </div>
                     </div>
                 </div>
-                <nav aria-label="user drop down menu" class="d-none"> 
+                <nav aria-label="user drop down menu" id="user-drop-down-menu" class="d-none">
                     <ul class="user-drop-down-menu ">
                         <li><a href="./legal-notice.html">Legal Notice</a></li>
                         <li><a href="./privacy-policy.html">Privacy Policy</a></li>
-                        <li><a href="#">Log Out</a></li>
+                        <li onclick="logOutUser()"><a>Log Out</a ></li>
                     </ul>
                 </nav>
             </div>
@@ -74,19 +72,19 @@
                         <div class="summary-content__left">
                             <div class="summary-content__metrics-row">
 
-                                <a href="./board.html"
-                                    class="metrics__box metrics__box-top metrics__icon-todo">
-                                    <img class="" src="../assets/img/to-do.svg" alt="Grey circle with a white pen in the center">
+                                <a href="./board.html" class="metrics__box metrics__box-top metrics__icon-todo">
+                                    <img class="" src="../assets/img/to-do.svg"
+                                        alt="Grey circle with a white pen in the center">
                                     <div class="metrics__box-text">
                                         <span class="metric-number" id="to-do-count"></span>
                                         <span class="metric-txt">To-do</span>
                                     </div>
                                 </a>
 
-                                <a href="./board.html"
-                                    class="metrics__box metrics__box-top
+                                <a href="./board.html" class="metrics__box metrics__box-top
                                     metrics__icon-done">
-                                    <img src="../assets/img/done.png" alt="Grey circle with a white checkmark in the center">
+                                    <img src="../assets/img/done.png"
+                                        alt="Grey circle with a white checkmark in the center">
                                     <div class="metrics__box-text">
                                         <span class="metric-number" id="done-count"></span>
                                         <span class="metric-txt">Done</span>
@@ -99,7 +97,8 @@
 
                                 <a href="./board.html" class="metrics__box metrics__box-middle">
                                     <div class="metrics__box-left">
-                                        <img src="../assets/img/urgent-summary.png" alt="Red circle with two white arrows on top of each other pointing up">
+                                        <img src="../assets/img/urgent-summary.png"
+                                            alt="Red circle with two white arrows on top of each other pointing up">
                                         <div class="metrics__box-text">
                                             <span class="metric-number" id="urgent-count"></span>
                                             <span class="metric-txt-middle">Urgent</span>
@@ -139,7 +138,7 @@
                             <h3 id="greeting-header"></h3>
                             <span id="greeting-name"></span>
                         </div>
-                    </div>    
+                    </div>
                 </section>
             </div>
         </main>
