feat: Update privacy policy and legal notice links for external view

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
     <footer class="content-wrapper">
         <div class="footer__privacy-legal-box">
-            <a href="./pages/privacy-policy.html">Privacy Policy</a>
-            <a href="./pages/legal-notice.html">Legal notice</a>
+            <a href="./pages/privacy-policy-external.html">Privacy Policy</a>
+            <a href="./pages/legal-notice-external.html">Legal notice</a>
         </div>
     </footer>
 
