--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -60,7 +60,7 @@
                 <p class="useraccess-form__privacy-policy">
                     <input type="checkbox" id="check" onclick="evaluateFormValidity()"/>
                     <label for="check"></label>
-                    <span>I accept the <a href="/pages/privacy-policy.html">Privacy Policy</a>
+                    <span>I accept the <a href="./privacy-policy-external.html" target="_blank">Privacy Policy</a>
                     </span>
                 </p>
             </div>
@@ -71,8 +71,8 @@
 
     <footer class="content-wrapper">
         <div class="footer__privacy-legal-box">
-            <a href="/pages/privacy-policy.html">Privacy Policy</a>
-            <a href="/pages/legal-notice.html">Legal notice</a>
+            <a href="./privacy-policy-external.html">Privacy Policy</a>
+            <a href="./legal-notice-external.html">Legal notice</a>
         </div>
     </footer>
 
