login and signup responsive design

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../styles/login-signup.css">
     <script src="../scripts/sign-up.js" defer></script>
-    <script src="../templates/tpl-sign-up.js" defer></script>
+    <script src="../templates/tpl-login-sign-up.js" defer></script>
     <script src="../scripts/mail-tld-validator.js" defer></script>
     <script src="../script.js" defer></script>
     <script src="../scripts/generate-user-id.js"></script>
@@ -18,7 +18,7 @@
 <body>
     <header class="content-wrapper header">
         <img class="header__joinlogo" src="../assets/img/logo-black.png"
-            alt="the word: join with a big J with a blue dot on the left side">
+            alt="the word 'Join' with a big J with a blue dot on the left side">
     </header>
 
     <main class="content-wrapper">
