--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
     <link rel="icon" href="./assets/img/logo-black.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./styles/login-signup.css">
+    <script src="./templates/tpl-login-sign-up.js"></script>
     <script src="./script.js" defer></script>
     <script src="./scripts/login.js" defer></script>
 </head>
 
 <body>
+    <div id="welcomescreen-mobile" class="welcomescreen-mobile">
+        <!-- <img src="./assets/img/logo-white.png" alt="the word 'Join' with a big J with a blue dot on the left side"> -->
+    </div>
     <header class="content-wrapper header">
-        <img id="joinlogo" class="header__joinlogo start" src="./assets/img/logo-black.png"
-            alt="the word: join with a big J with a blue dot on the left side,">
+        <img id="joinlogo" class="header__joinlogo start welcome-logo" src="./assets/img/logo-black.png"
+            alt="the word 'Join' with a big J with a blue dot on the left side">
         <div class="header__signup invisible">
             <span>Not a Join user?</span>
             <button class="btn filled-btn" onclick="location.href='/pages/sign-up.html'">Sign
@@ -36,10 +40,12 @@
                     <img src="./assets/img/mail.svg" alt="icon of an email">
                 </div>
 
-                <div id="password__wrapper"  class="inputfield__wrapper">
+                <div id="password__wrapper" class="inputfield__wrapper">
                     <input id="password" type="password" placeholder="Password" aria-label="password">
-                    <img id="password-icon" src="./assets/img/lock.svg" alt="icon of a lock" onclick="togglePasswordVisibility()">
-                    <p id="pw-error-warning" class="confirm-password__err-warning">Check your email and password. Please try again.</p>
+                    <img id="password-icon" src="./assets/img/lock.svg" alt="icon of a lock"
+                        onclick="togglePasswordVisibility()">
+                    <p id="pw-error-warning" class="confirm-password__err-warning">Check your email and password. Please
+                        try again.</p>
                 </div>
             </div>
 
@@ -50,7 +56,7 @@
         </form>
     </main>
 
-    <footer class="content-wrapper">
+    <footer class="content-wrapper invisible">
         <div class="footer__privacy-legal-box">
             <a href="./pages/privacy-policy-external.html">Privacy Policy</a>
             <a href="./pages/legal-notice-external.html">Legal notice</a>
