fix create task function, implement : alert function

--- a/pages/add-task-insert.html
+++ b/pages/add-task-insert.html
@@ -23,17 +23,17 @@
             <div class="add-task__field">
                 <span id="priority-label">Priority</span>
                 <div class="priority-options" role="group" aria-labelledby="priority-label">
-                    <button class="priority-options-btn" id="urgent" 
+                    <button type="button" class="priority-options-btn" id="urgent" 
                         onclick="changePriorityBtn(this)">Urgent <img
                             src="../assets/img/priority-urgent.svg"
                             data-default="../assets/img/priority-urgent.svg"
                             data-selected="../assets/img/priority-urgent-active.svg" alt="urgent"></button>
-                    <button class="priority-options-btn" id="medium"
+                    <button type="button" class="priority-options-btn" id="medium"
                         onclick="changePriorityBtn(this)">Medium <img
                             src="../assets/img/priority-medium.svg"
                             data-default="../assets/img/priority-medium.svg"
                             data-selected="../assets/img/priority-medium-active.svg" alt="medium"></button>
-                    <button class="priority-options-btn" id="low"
+                    <button type="button" class="priority-options-btn" id="low"
                         onclick="changePriorityBtn(this)">Low <img 
                             src="../assets/img/priority-low.svg"
                             data-default="../assets/img/priority-low.svg"
