--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -18,6 +18,7 @@
     <script src="../scripts/add-task.js" defer></script>
     <script src="../scripts/load-inserts.js" defer></script>
     <script src="../scripts/manage-user-profil.js" defer></script>
+    <script src="../templates/tpl-add-task-allert.js" defer></script>
 
 </head>
 
@@ -59,12 +60,22 @@
                     </nav>
             </div>
         </header>
-
+        <input type="hidden" id="task-state" value="to-do">
         <main>
             <div class="content">
                 <div data-insert="add-task-insert.html"></div>
             </div>
         </main>
+        <!-- ALERT OVERLAY -->
+<div id="alert-overlay" class="alert-overlay d-none">
+  <div class="alert-box">
+    <h2 id="alert-message">Task added successfully!</h2>
+    <div class="alert-buttons">
+      <button id="alert-ok" onclick="closeAlertOverlay()">OK</button>
+      <button id="alert-board" onclick="goToBoard()">Go to Board</button>
+    </div>
+  </div>
+</div>
     </div>
 
 </body>
