--- a/pages/board.html
+++ b/pages/board.html
@@ -24,6 +24,7 @@
     <script src="../scripts/load-inserts.js" defer></script>
     <script src="../scripts/dlg-edit-task-assignment.js" defer></script>
     <script src="../scripts/dlg-add-task-subtask-handling.js" defer></script>
+    <script src="../scripts/dlg-edit-task.js" defer></script>
     <script src="../scripts/drag-and-drop.js" defer></script>
 
     <script src="../templates/tpl-dlg-task-info-Helper.js" defer></script>
