alert overlay added to board.html

--- a/pages/board.html
+++ b/pages/board.html
@@ -136,6 +136,16 @@
                 </section>
             </div>
         </main>
+        <!-- ALERT OVERLAY -->
+<div id="alert-overlay" class="alert-overlay d-none">
+  <div class="alert-box">
+    <h2 id="alert-message">Task added successfully!</h2>
+    <div class="alert-buttons">
+      <button id="alert-ok" onclick="closeAlertOverlay()">OK</button>
+      <button id="alert-board" onclick="goToBoard()">Go to Board</button>
+    </div>
+  </div>
+</div>
     </div>
 
     <overlay id="overlay" class="overlay d-none"></overlay>
