--- a/pages/summary.html
+++ b/pages/summary.html
@@ -18,7 +18,12 @@
     <script src="../scripts/main.js" defer></script>
     <script src="../scripts/navigation.js" defer></script>
     <script src="../scripts/summary.js" defer></script>
+    <script src="../templates/tpl-navigation.js" defer></script>
+
+
 </head>
+
+
 
 <body onload="initSummary()">
     <nav aria-label="Primary navigation" id="nav-menu" class="nav-menu">
@@ -53,7 +58,7 @@
                     <ul class="user-drop-down-menu ">
                         <li><a href="./legal-notice.html">Legal Notice</a></li>
                         <li><a href="./privacy-policy.html">Privacy Policy</a></li>
-                        <li onclick="logOutUser()"><a>Log Out</a ></li>
+                        <li onclick="logOutUser()"><a>Log Out</a></li>
                     </ul>
                 </nav>
             </div>
