--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -20,7 +20,11 @@
     <script src="../scripts/dlgs-contact.js"></script>
     <script src="../scripts/generate-user-id.js"></script>
     <script src="../scripts/manage-user-profil.js" defer></script>
+    <script src="../templates/tpl-navigation.js" defer></script>
+<script src="../scripts/navigation.js" defer></script>
 </head>
+
+
 
 <body onload="renderContactList()">
     <nav aria-label="Primary navigation" id="nav-menu" class="nav-menu">
@@ -57,7 +61,7 @@
                         <ul class="user-drop-down-menu">
                             <li><a href="./legal-notice.html">Legal Notice</a></li>
                             <li><a href="./privacy-policy.html">Privacy Policy</a></li>
-                            <li onclick="logOutUser()"><a>Log Out</a ></li>
+                            <li onclick="logOutUser()"><a>Log Out</a></li>
                         </ul>
                     </nav>
                 </div>
