--- a/pages/help.html
+++ b/pages/help.html
@@ -15,7 +15,10 @@
     <script src="../scripts/manage-user-profil.js" defer></script>
     <script src="../script.js" defer></script>
     <script src="../scripts/navigation.js" defer></script>
+    <script src="../templates/tpl-navigation.js" defer></script>
 </head>
+
+
 
 <body>
     <nav aria-label="Primary navigation" id="nav-menu" class="nav-menu">
