--- a/pages/legal-notice-external.html
+++ b/pages/legal-notice-external.html
@@ -14,7 +14,10 @@
     <link rel="stylesheet" href="../styles/legal-notice.css">
     <script src="../script.js" defer></script>
     <script src="../scripts/navigation.js" defer></script>
+    <script src="../templates/tpl-navigation.js" defer></script>
 </head>
+
+
 
 <body>
 
