--- a/pages/legal-notice.html
+++ b/pages/legal-notice.html
@@ -15,7 +15,12 @@
     <script src="../scripts/manage-user-profil.js" defer></script>
     <script src="../script.js" defer></script>
     <script src="../scripts/navigation.js" defer></script>
+    <script src="../templates/tpl-navigation.js" defer></script>
+
+
 </head>
+
+
 
 <body>
 
@@ -44,12 +49,12 @@
                     </div>
                 </div>
                 <nav aria-label="user drop down menu" id="user-drop-down-menu" class="d-none">
-                        <ul class="user-drop-down-menu">
-                            <li><a href="./legal-notice.html">Legal Notice</a></li>
-                            <li><a href="./privacy-policy.html">Privacy Policy</a></li>
-                            <li onclick="logOutUser()"><a>Log Out</a ></li>
-                        </ul>
-                    </nav>
+                    <ul class="user-drop-down-menu">
+                        <li><a href="./legal-notice.html">Legal Notice</a></li>
+                        <li><a href="./privacy-policy.html">Privacy Policy</a></li>
+                        <li onclick="logOutUser()"><a>Log Out</a></li>
+                    </ul>
+                </nav>
             </div>
         </header>
 
