--- a/pages/privacy-policy-external.html
+++ b/pages/privacy-policy-external.html
@@ -15,7 +15,12 @@
     <link rel="stylesheet" href="../styles/privacy-policy.css">
     <script src="../script.js" defer></script>
     <script src="../scripts/navigation.js" defer></script>
+    <script src="../templates/tpl-navigation.js" defer></script>
+
+
 </head>
+
+
 
 <body>
 
