--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -21,7 +21,7 @@
     <script src="../scripts/generate-user-id.js"></script>
     <script src="../scripts/manage-user-profil.js" defer></script>
     <script src="../templates/tpl-navigation.js" defer></script>
-<script src="../scripts/navigation.js" defer></script>
+    <script src="../scripts/navigation.js" defer></script>
 </head>
 
 
@@ -115,6 +115,10 @@
                 </div>
                 <overlay id="overlay" class="overlay d-none"></overlay>
                 <dialog id="dlg-box" class="add-contact__dialog d-none"></dialog>
+                <img src="../assets/img/contacts-add-user.svg"
+                    alt="The outline of a person with a plus symbol next to it" class="add-user-icon" onclick="renderAddContactDlg()">
+                <img src="../assets/img/contacts-options.svg" alt="Three dots on top of each other"
+                    class="contacts-options-icon">
             </main>
         </div>
 </body>
