--- a/pages/add-task-insert.html
+++ b/pages/add-task-insert.html
@@ -41,19 +41,17 @@
                             alt="low"></button>
                 </div>
             </div>
-            <div class="add-task__field">
-                <label for="assigned-to">Assigned to</label>
-                <select name="assigned-to" id="assigned-to" multiple>
-                    <option value="" disabled selected hidden>Select contacts to assign</option>
-                </select>
-            </div>
-            <div class="add-task__field">
-                <label for="category" class="required--after">Category</label>
-                <select name="category" id="category" required>
-                    <option value="" disabled selected hidden>Select task category</option>
-                    <option value="technicalTask">Technical Task</option>
-                    <option value="userStory">User Story</option>
-                </select>
+           
+            <div class="dlg-edit__main__task-assignments-box">
+                <span class="dlg-edit__main__assignments-title">Assigned to</span>
+                    <div class="contacts-selection" id="contact-select">
+                      <div class="search-wrapper">
+                        <input type="text" id="contact-search" class="selector" placeholder="Search contacts to assign..." autocomplete="off"/>
+                      </div>
+                      <ul class="contact-options"></ul>
+                    </div>
+
+                <div class="dlg-edit__main__assigned-user-container"></div>
             </div>
             <div class="add-task__field subtasks__input--border-color">
                 <label for="subtasks">Subtasks</label>
