feat: create new contact animation; improve responsiveness

--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -19,6 +19,7 @@
     <script src="../scripts/load-inserts.js" defer></script>
     <script src="../scripts/manage-user-profil.js" defer></script>
     <script src="../templates/tpl-navigation.js" defer></script>
+    <script src="../templates/tpl-add-task.js"></script>
 <script src="../scripts/navigation.js" defer></script>
 </head>
 
