--- a/pages/add-task-insert.html
+++ b/pages/add-task-insert.html
@@ -63,7 +63,7 @@
     </div>
 
     <div class="task-content__footer">
-        <span class="required required--before"> This field is required</span>
+        <span id="required" class="required required--before"> This field is required</span>
         <div class="task-content__footer-btn">
             <button type="button"  onclick="clearTask()" class="empty-btn">Clear
                 <img src="../assets/img/close.svg" alt="close icon">
