feat: enhance summary layout and improve responsiveness;

--- a/pages/summary.html
+++ b/pages/summary.html
@@ -117,7 +117,7 @@
                                 </a>
                             </div>
 
-                            <div class="summary-content__metrics-row">
+                            <div id="bottom-row" class="summary-content__metrics-row">
                                 <a href="./board.html" class="metrics__box metrics__box-bottom">
                                     <div class="metrics__box-text">
                                         <span class="metric-number" id="tasks-count"></span>
